# casadi_mpc_nyuumon

./: how_to_run.md  readme.md
cortex_a9/: install.md
src/: _QP周りの検証.ipynb  _chapter4_old.ipynb  _chapter7_2d_quadrotor.ipynb  _chapter7_QP_benchmarking.ipynb  _chapter7_chain_of_masses.ipynb  _hpipm.ipynb  _ロトカボルテラ.ipynb  chapter2.ipynb  chapter3.ipynb  chapter4.ipynb  chapter5.ipynb  chapter5_v2_fatrop.ipynb  chapter5_v3_improved_cost_approx.ipynb  chapter6_collocation.ipynb  chapter6_collocation2_draft.ipynb  chapter6_collocation_cartpole.ipynb  chapter6_collocation_stiff.ipynb  chapter6_collocation_stiff_draft.ipynb  chapter6_initial_guess.ipynb  chapter6_limit_iter.ipynb  chapter6_limit_iteration.ipynb  chapter6_single_shooting.ipynb  chapter6_single_shooting_gross.ipynb  chapter6_single_shooting_gross_v2.ipynb  chapter6_warm_start_experiment_solution_time.ipynb  chapter7_2d_quadrotor.ipynb  chapter7_NLP_benchmarking.ipynb  chapter7_NLP_chain_of_masses.ipynb  chapter7_NLP_comparison.ipynb  chapter7_QP_benchmarking.ipynb  chapter7_QP_example.ipynb  chapter7_chain_of_mass_demo.ipynb  chapter7_chain_of_masses.ipynb  chapter7_chain_of_masses_new.ipynb  chapter7_mass_spring_damper.ipynb  chapter7_planer_quadrotor.ipynb  chapter8.ipynb  chapter8_2.ipynb  chapter8_CSTR.ipynb  (+14 more)
src/pinocchio_example/: CMakeLists.txt  csfn_bias_term.casadi  csfn_forward_dynamics.casadi  csfn_inverse_dynamics.casadi  csfn_mass_matrix.casadi  test_casadi_fn_by_pinocchio.py
src/pinocchio_example/src/: get_casadi_fn_using_pinocchio.cpp
src/pinocchio_example/urdf/: panda.urdf
suppl/: ref.bib  (+2 more)
(+6 files in other folders)
